travel_portal.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rome-portal-web
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: rome-portal
        version: web
    spec:
      containers:
        - name: rome-portal-web
          image: lucasponce/travel_portal:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            privileged: false
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rome-portal-vip
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: rome-portal
        version: vip
    spec:
      containers:
        - name: rome-portal-vip
          image: lucasponce/travel_portal:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            privileged: false
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: paris-portal-web
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: paris-portal
        version: web
    spec:
      containers:
        - name: paris-portal-web
          image: lucasponce/travel_portal:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            privileged: false
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: paris-portal-vip
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: paris-portal
        version: vip
    spec:
      containers:
        - name: paris-portal-vip
          image: lucasponce/travel_portal:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            privileged: false
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: london-portal-web
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: london-portal
        version: web
    spec:
      containers:
        - name: london-portal-web
          image: lucasponce/travel_portal:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            privileged: false
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: london-portal-vip
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: london-portal
        version: vip
    spec:
      containers:
        - name: london-portal-vip
          image: lucasponce/travel_portal:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            privileged: false
