travel_agency_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: travel-agency-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: travel-agency-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - travel-agency-gateway
  http:
    - match:
        - uri:
            prefix: /travels/
        - uri:
            prefix: /travels
      route:
        - destination:
            host: travels
            port:
              number: 8000
